--- a/html/assignmentModal.html
+++ b/html/assignmentModal.html
@@ -1,31 +1,26 @@
-<!DOCTYPE html>
-<html>
-
-<head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Create an Account</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
-    <link href="https://www.w3schools.com/w3css/4/w3.css" rel="stylesheet">
-    <script src='main.js'></script>
-</head>
-
-<body>
-    <ul class="nav nav-tabs navbar-light bg-light">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="overview.html">Overview</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="assignments.html">Assignments</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="">Contacts</a>
-        </li>
-    </ul>
-</body>
-
-
-</html>
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="mb-3">
+            <label for="recipient-name" class="col-form-label">Recipient:</label>
+            <input type="text" class="form-control" id="recipient-name">
+          </div>
+          <div class="mb-3">
+            <label for="message-text" class="col-form-label">Message:</label>
+            <textarea class="form-control" id="message-text"></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Send message</button>
+      </div>
+    </div>
+  </div>
+</div>
