--- a/html/assignments.html
+++ b/html/assignments.html
@@ -3,12 +3,12 @@
 
 <head>
   <meta charset='utf-8'>
-  <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>Assignments</title>
-  <meta name='viewport' content='width=device-width, height=device-heigth, initial-scale=1'>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
   <link rel="stylesheet" href="assignments.css">
 </head>
 
@@ -48,8 +48,9 @@
               <button type="button"
                 class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
                 Assignments</button>
-              <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Lab 2<span
-                  style="float:right;">75% Complete</span><br>12 Hours</button>
+              <button type="button" class="list-group-item list-group-item-action text-dark bg-light"
+                data-toggle="modal" data-target="#exampleModal">Lab 2<span style="float:right;">75%
+                  Complete</span><br>12 Hours</button>
               <button type="button" class="list-group-item list-group-item-action text-light bg-danger disabled">Past
                 Due</button>
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light disabled">No
@@ -136,10 +137,39 @@
     </div>
   </div>
 
-  <!-- Bootstrap -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-    crossorigin="anonymous"></script>
+  <!-- Lab 2 Modal -->
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="exampleModalLabel">Physics - Lab 2</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
+            <button type="button" class="list-group-item list-group-item-action text-dark disabled"
+              style="border-style:none;text-align:center;">75% Completed</button>
+            <button type="button" class="list-group-item list-group-item-action text-dark disabled pb-2"
+              style="border-style:none;text-align:center;">Due Date: 4/25 at 11:59pm</button>
+          </div>
+
+          <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
+            <button type="button"
+              class="list-group-item list-group-item-action text-light bg-danger disabled">TODO:</button>
+            <button type="button" class="list-group-item list-group-item-action text-dark bg-light disabled">Question
+              1</button>
+            <button type="button" class="list-group-item list-group-item-action text-dark bg-light disabled">Question
+              5</button>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 
