--- a/html/contacts.html
+++ b/html/contacts.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Assignments</title>
+    <title>Contacts</title>
     <meta name='viewport' content='width=device-width, height=device-heigth, initial-scale=1'>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -43,19 +43,23 @@
             <div class="col-3">
                 <div class="card card-block text-center" style="height:95%">
                     <div class="card-body">
-                        <h5 class="card-title mt-2 pb-2 pt-2">Physics</h5>
+                        <h5 class="card-title mt-2 pb-2 pt-2">Mr. Phil
+                            Collins</h5>
+                        <img src="../img/profile.png" class="card-img-top" alt="...">
                         <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
                             <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-primary disabled">Mr. Phil
-                                Collins</button>
-                            <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Lab
-                                2<span style="float:right;">75% Complete</span><br>12 Hours</button>
+                                class="list-group-item list-group-item-action text-light bg-secondary disabled">Contact
+                                Information</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-danger disabled">Past
-                                Due</button>
+                                class="list-group-item list-group-item-action text-dark bg-light disabled">Email:
+                                pcollins@school.edu<br>
+                                Phone Number: 666-666-6666</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light disabled">No
-                                Assignments Past Due</button>
+                                class="list-group-item list-group-item-action text-light bg-success disabled">Classes</button>
+                            <button type="button"
+                                class="list-group-item list-group-item-action text-dark bg-light disabled">The Air
+                                Tonight 101
+                            </button>
                         </div>
                     </div>
                 </div>
@@ -64,20 +68,21 @@
             <div class="col-3">
                 <div class="card card-block text-center" style="height:95%">
                     <div class="card-body">
-                        <h5 class="card-title mt-2 pb-2 pt-2">Trigonometry</h5>
+                        <h5 class="card-title mt-2 pb-2 pt-2">Ms. Anna Kendrik</h5>
+                        <img src="../img/profile.png" class="card-img-top" alt="...">
                         <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
                             <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
-                                Assignments</button>
+                                class="list-group-item list-group-item-action text-light bg-secondary disabled">Contact
+                                Information</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light">Problems #5<span
-                                    style="float:right;">50% Complete</span><br>2 Days</button>
+                                class="list-group-item list-group-item-action text-dark bg-light disabled">Email:
+                                akendrik@school.edu<br>
+                                Phone Number: 888-333-1337</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-danger disabled">Past
-                                Due</button>
+                                class="list-group-item list-group-item-action text-light bg-success disabled">Classes</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light">Problems #4<span
-                                    style="float:right;">25% Complete</span><br>5 Days</button>
+                                class="list-group-item list-group-item-action text-dark bg-light disabled">Music
+                                101<br>Music Appriation</button>
                         </div>
                     </div>
                 </div>
@@ -86,61 +91,21 @@
             <div class="col-3">
                 <div class="card card-block text-center" style="height:95%">
                     <div class="card-body">
-                        <h5 class="card-title mt-2 pb-2 pt-2">Chemistry</h5>
-                        <img src="../img/checkmark.png" class="card-img-top" alt="...">
-                        <button type="button" class="list-group-item list-group-item-action text-dark disabled"
-                            style="border-style: none;">
-                            <h5 class="card-title mt-2 pb-2 pt-2">You're all caught up!</h5>
-                        </button>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-3">
-                <div class="card card-block text-center" style="height:95%">
-                    <div class="card-body">
-                        <h5 class="card-title mt-2 pb-2 pt-2">Basketweaving</h5>
+                        <h5 class="card-title mt-2 pb-2 pt-2">Dr. Phil</h5>
+                        <img src="../img/profile.png" class="card-img-top" alt="...">
                         <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
                             <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
-                                Assignments</button>
+                                class="list-group-item list-group-item-action text-light bg-secondary disabled">Contact
+                                Information</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light">Wicker Basket<span
-                                    style="float:right;">95% Complete</span><br>12 Hours</button>
+                                class="list-group-item list-group-item-action text-dark bg-light disabled">Email:
+                                thephilster@school.edu<br>
+                                Phone Number: 420-690-1111</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-danger disabled">Past
-                                Due</button>
+                                class="list-group-item list-group-item-action text-light bg-success disabled">Classes</button>
                             <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light disabled">No
-                                Assignments Past Due</button>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
-            <div class="col-3">
-                <div class="card card-block text-center" style="height:95%">
-                    <div class="card-body">
-                        <h5 class="card-title mt-2 pb-2 pt-2">Calculus</h5>
-                        <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
-                            <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
-                                Assignments</button>
-                            <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light">Assignment 7<span
-                                    style="float:right;">68% Complete</span><br>10 minutes</button>
-                            <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light">Assignment 8<span
-                                    style="float:right;">30% Complete</span><br>23 hours</button>
-                            <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light">Assignment 9<span
-                                    style="float:right;">0% Complete</span><br>2 Days</button>
-                            <button type="button"
-                                class="list-group-item list-group-item-action text-light bg-danger disabled">Past
-                                Due</button>
-                            <button type="button"
-                                class="list-group-item list-group-item-action text-dark bg-light disabled">No
-                                Assignments Past Due</button>
+                                class="list-group-item list-group-item-action text-dark bg-light disabled">Advanced
+                                Basketweaving</button>
                         </div>
                     </div>
                 </div>
