--- a/html/student/contacts.html
+++ b/html/student/contacts.html
@@ -25,11 +25,11 @@
             <li class="nav-item">
                 <a class="nav-link active" id="contacts.html" href="contacts.html">Contacts</a>
             </li>
-            <li class="nav-item" style="margin-left: auto;">
-                <a class="nav-link" id="username" href="#">notset@notreal.url</a>
+            <li class="nav-item disabled" style="margin-left: auto;">
+                <a class="nav-link disabled" id="username">fbarson@school.edu</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="login.html">Log Out</a>
+                <a class="nav-link" href="../login.html">Log Out</a>
             </li>
         </ul>
     </div>
@@ -45,7 +45,8 @@
                     <div class="card-body">
                         <h5 class="card-title mt-2 pb-2 pt-2">Mr. Phil
                             Collins</h5>
-                        <img src="../img/profile.png" class="card-img-top" alt="...">
+                        <img style="width: 50%;" src="../../img/profile.png" class="align-self-center card-img-top"
+                            alt="...">
                         <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
                             <button type="button"
                                 class="list-group-item list-group-item-action text-light bg-secondary disabled">Contact
@@ -69,7 +70,8 @@
                 <div class="card card-block text-center" style="height:95%">
                     <div class="card-body">
                         <h5 class="card-title mt-2 pb-2 pt-2">Ms. Anna Kendrik</h5>
-                        <img src="../img/profile.png" class="card-img-top" alt="...">
+                        <img style="width: 50%;" src="../../img/profile.png" class="align-self-center card-img-top"
+                            alt="...">
                         <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
                             <button type="button"
                                 class="list-group-item list-group-item-action text-light bg-secondary disabled">Contact
@@ -92,7 +94,8 @@
                 <div class="card card-block text-center" style="height:95%">
                     <div class="card-body">
                         <h5 class="card-title mt-2 pb-2 pt-2">Dr. Phil</h5>
-                        <img src="../img/profile.png" class="card-img-top" alt="...">
+                        <img style="width: 50%;" src="../../img/profile.png" class="align-self-center card-img-top"
+                            alt="...">
                         <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
                             <button type="button"
                                 class="list-group-item list-group-item-action text-light bg-secondary disabled">Contact
