--- a/html/login.html
+++ b/html/login.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html>
 
 <head>
     <meta charset='utf-8'>
@@ -12,35 +11,63 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
 
-<body style="background-color:#B0C4DE;">
-    <div class="container">
-        <div class="row">
-            <div class="col-sm"></div>
-            <div class="col-sm">
-                <p>
-                <H1>EDU-Link: Sign In</H1>
-                </p>
+<body style="background-color:#B0C4DE;height:100vh">
 
-                <div class="mb-3">
+    <script>
+        function fillLogin(type) {
+            if (type = "parent") {
+                document.getElementById("username") = "mbarson@school.edu"
+            } else if (type = "student") {
+                document.getElementById("username") = "fbarson@school.edu"
+            }
+        }
+
+        function login() {
+            var username = document.getElementById("username").value;
+            if (username == "mbarson@school.edu")  // parent login
+                window.location = "parent/studentSelect.html";
+            else if (username == "fbarson@school.edu") // student login
+                window.location = "student/overview.html";
+            else
+                return
+        }
+    </script>
+
+    <div style="height: 20vh;"></div>
+
+    <div style="height: 33%;">
+
+        <div class="d-flex align-items-center justify-content-center">
+            <div class="p-2 bd-highlight card">
+
+                <div class="align-self-center" style="width: 50%;">
+                    <img style="width: 100%;" src="../img/logo.png">
+                </div>
+
+                <div class="mb-3 mx-2">
+                    <H1>EDU-Link: Sign In</H1>
+                </div>
+
+                <div class="mb-3 mx-2">
                     <label for="user" class="form-label">Email address</label>
                     <input type="user" class="form-control" id="username" aria-describedby="userHelp">
                     <div id="userHelp" class="form-text"></div>
                     <div id="userFeedback"><span class="invalid-feedback"></span></div>
                 </div>
-                <div class="mb-3">
+
+                <div class="mb-3 mx-2">
                     <label for="pass" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password">
                     <div id="passFeedback"><span class="invalid-feedback"></span></div>
                 </div>
-                <button type="submit" class="btn btn-primary" onClick="login()">Log in</button>
-                <button type="submit" class="btn btn-primary" onClick="login()">Create account</button>
+
+                <button type="submit" class="btn btn-primary m-2" onClick="login()">Log in</button>
+                <!-- <a type="submit" class="btn btn-primary m-2" href="createAccount.html">Create account</a> -->
+
             </div>
-            <div class="col-sm"></div>
         </div>
     </div>
 
-    <img src="../img/logo.png">
-    <script src="../js/login.js"></script>
     <!-- Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
