--- a/html/parent/assignments.html
+++ b/html/parent/assignments.html
@@ -7,30 +7,46 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../css/assignments.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
-  <link rel="stylesheet" href="assignments.css">
 </head>
 
 <body style="background-color:#B0C4DE;height:95vh">
   <!-- Header -->
   <div id="header">
-    <ul class="nav nav-tabs navbar-light bg-light">
-      <li class="nav-item">
-        <a class="nav-link" id="overview.html" href="overview.html">Overview</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link active" id="assignments.html" href="assignments.html">Assignments</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="contacts.html" href="contacts.html">Contacts</a>
-      </li>
-      <li class="nav-item" style="margin-left: auto;">
-        <a class="nav-link" id="username" href="#">notset@notreal.url</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="login.html">Log Out</a>
-      </li>
+    <ul class="nav nav-tabs navbar-light bg-light test" style="text-align:left;width:100%;">
+
+      <div class="justify-content-end" style="display:inline-block;width:33%;">
+        <li class="nav-item test">
+          <a class="nav-link" id="overview.html" href="overview.html">Overview</a>
+        </li>
+        <li class="nav-item test">
+          <a class="nav-link active" id="assignments.html" href="assignments.html">Assignments</a>
+        </li>
+        <li class="nav-item test">
+          <a class="nav-link" id="contacts.html" href="contacts.html">Contacts</a>
+        </li>
+      </div>
+
+      <div class="justify-content-center" style="display: inline-block;width: 33%;text-align: center;">
+        <li class="nav-item test">
+          <a class="nav-link disabled" id="studentName">Fooman Barson</a>
+        </li>
+        <li class="nav-item test">
+          <a class="nav-link" id="studentSelect.html" href="studentSelect.html">Change Student</a>
+        </li>
+      </div>
+
+      <div class="justify-content-end" style="display:inline-block;width:33%;text-align:right;">
+        <li class="nav-item test">
+          <a class="nav-link disabled" id="username" href="#">mbarson@school.edu</a>
+        </li>
+        <li class="nav-item test">
+          <a class="nav-link" href="../login.html">Log Out</a>
+        </li>
+      </div>
+
     </ul>
   </div>
   <!-- Header -->
@@ -48,13 +64,17 @@
               <button type="button"
                 class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
                 Assignments</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light"
                 data-toggle="modal" data-target="#exampleModal">Lab 2<span style="float:right;">75%
                   Complete</span><br>12 Hours</button>
+
               <button type="button" class="list-group-item list-group-item-action text-light bg-danger disabled">Past
                 Due</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light disabled">No
                 Assignments Past Due</button>
+
             </div>
           </div>
         </div>
@@ -65,15 +85,20 @@
           <div class="card-body">
             <h5 class="card-title mt-2 pb-2 pt-2">Trigonometry</h5>
             <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
+
               <button type="button"
                 class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
                 Assignments</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Problems #5<span
                   style="float:right;">50% Complete</span><br>2 Days</button>
+
               <button type="button" class="list-group-item list-group-item-action text-light bg-danger disabled">Past
                 Due</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Problems #4<span
                   style="float:right;">25% Complete</span><br>5 Days</button>
+
             </div>
           </div>
         </div>
@@ -83,9 +108,11 @@
         <div class="card card-block text-center" style="height:95%">
           <div class="card-body">
             <h5 class="card-title mt-2 pb-2 pt-2">Chemistry</h5>
-            <img src="../img/checkmark.png" class="card-img-top" alt="...">
+            <img src="../../img/checkmark.png" class="card-img-top" alt="...">
+
             <button type="button" class="list-group-item list-group-item-action text-dark disabled"
               style="border-style: none;">
+
               <h5 class="card-title mt-2 pb-2 pt-2">You're all caught up!</h5>
             </button>
           </div>
@@ -97,13 +124,17 @@
           <div class="card-body">
             <h5 class="card-title mt-2 pb-2 pt-2">Basketweaving</h5>
             <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
+
               <button type="button"
                 class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
                 Assignments</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Wicker Basket<span
                   style="float:right;">95% Complete</span><br>12 Hours</button>
+
               <button type="button" class="list-group-item list-group-item-action text-light bg-danger disabled">Past
                 Due</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light disabled">No
                 Assignments Past Due</button>
             </div>
@@ -116,17 +147,23 @@
           <div class="card-body">
             <h5 class="card-title mt-2 pb-2 pt-2">Calculus</h5>
             <div class="list-group mt-4 pb-4 pt-2" style="text-align: left;">
+
               <button type="button"
                 class="list-group-item list-group-item-action text-light bg-primary disabled">Upcoming
                 Assignments</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Assignment 7<span
                   style="float:right;">68% Complete</span><br>10 minutes</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Assignment 8<span
                   style="float:right;">30% Complete</span><br>23 hours</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light">Assignment 9<span
                   style="float:right;">0% Complete</span><br>2 Days</button>
+
               <button type="button" class="list-group-item list-group-item-action text-light bg-danger disabled">Past
                 Due</button>
+
               <button type="button" class="list-group-item list-group-item-action text-dark bg-light disabled">No
                 Assignments Past Due</button>
             </div>
