--- a/html/parent/assignments.html
+++ b/html/parent/assignments.html
@@ -8,6 +8,7 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="../../css/assignments.css" rel="stylesheet">
+  <link href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -43,7 +44,7 @@
           <a class="nav-link disabled" id="username" href="#">mbarson@school.edu</a>
         </li>
         <li class="nav-item test">
-          <a class="nav-link" href="../login.html">Log Out</a>
+          <a class="nav-link" href="../login.html"><i class="fas fa-sign-out-alt"></i> Log Out</a>
         </li>
       </div>
 
