--- a/html/parent/contacts.html
+++ b/html/parent/contacts.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
     <link rel="stylesheet" href="assignments.css">
+    <link href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 </head>
 
 <body style="background-color:#B0C4DE;height:95vh">
@@ -44,7 +45,7 @@
                     <a class="nav-link disabled" id="username" href="#">mbarson@school.edu</a>
                 </li>
                 <li class="nav-item test">
-                    <a class="nav-link" href="../login.html">Log Out</a>
+                    <a class="nav-link" href="../login.html"><i class="fas fa-sign-out-alt"></i> Log Out</a>
                 </li>
             </div>
 
