--- a/html/parent/studentSelect.html
+++ b/html/parent/studentSelect.html
@@ -9,14 +9,17 @@
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+  <link href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
 </head>
 
 <body style="background-color:#B0C4DE;">
 
   <ul class="nav nav-tabs navbar-light bg-light">
-    <li class="nav-item">
-      <a class="nav-link" href="../login.html">Log Out</a>
-    </li>
+    <div class="justify-content-end" style="display:inline-block;width:95%;"></div>
+      <li class="nav-item">
+        <a class="nav-link" href="../login.html"><i class="fas fa-sign-out-alt"></i> Log Out</a>
+      </li>
+    </div>
   </ul>
 
   <div class="container-fluid custom-height" style="height:95%">
