--- a/html/student/assignments.html
+++ b/html/student/assignments.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -28,7 +29,7 @@
         <a class="nav-link disabled" id="username">fbarson@school.edu</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../login.html">Log Out</a>
+        <a class="nav-link" href="../login.html"><i class="fas fa-sign-out-alt"></i> Log Out</a>
       </li>
     </ul>
   </div>
