--- a/html/student/overview.html
+++ b/html/student/overview.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="../../node_modules/@fortawesome/fontawesome-free/css/all.min.css" rel="stylesheet">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -28,7 +29,7 @@
         <a class="nav-link disabled" id="username">fbarson@school.edu</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="../login.html">Log Out</a>
+        <a class="nav-link" href="../login.html"><i class="fas fa-sign-out-alt"></i> Log Out</a>
       </li>
     </ul>
   </div>
@@ -38,6 +39,12 @@
     <div class="card m-4 p-4">
       <div class="container">
         <img src="../../img/profile.png" class="img-fluid" alt="..." style="max-width:10%;display:inline;">
+        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"></button>
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+            <a class="dropdown-item" href="#"><i class="fas fa-user-circle"></i> My Account</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-cog"></i> Settings</a>
+            <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt"></i> Logout</a>
+          </div>
         <h3 class="card-title" style="display:inline;">Fooman Barson</h3>
       </div>
       <div class="btn-group">
